Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8332923

ObjectMonitorUsage.java failed with unexpected waiter_count

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4 P4
    • 23
    • None
    • hotspot
    • None
    • b26
    • x86, s390x
    • linux

      ObjectMonitorUsage.java failed with unexpected waiter_count after JDK-8328083 on linux x86_32

      This faillure report from GHA test runner: https://github.com/sendaoYan/jdk-ysd/actions/runs/9240129350/job/25420392632

      test command:
      rm -rf tmp ; jtreg -va -nr -w tmp -nativepath:$PWD/build/linux-x86-server-release/images/test/hotspot/jtreg/native -jdk:build/linux-x86-server-release/images/jdk/ test/hotspot/jtreg/serviceability/jvmti/ObjectMonitorUsage/ObjectMonitorUsage.java

      test logs snippet:
      ### test0: started virtual
      >>> [12]
      >>> owner: none (0x0)
      >>> entry_count: 0
      >>> waiter_count: 0
      >>> notify_waiter_count: 4
      >>> notify_waiters:
      >>> 0: WaitingVT0 (0x0x97f01250)
      >>> 1: WaitingVT1 (0x0x97f01254)
      >>> 2: WaitingVT2 (0x0x97f01258)
      >>> 3: WaitingVT3 (0x0x97f0125c)
      FAILED: (12) notify_waiter_count expected: 0, actually: 4
      ### test0: finished virtual

      ### test1: started virtual
      >>> [13]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 0
      >>> notify_waiter_count: 0
      >>> [14]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 4
      >>> notify_waiter_count: 0
      >>> waiters:
      >>> 0: EnteringVT0 (0x0x97f01254)
      >>> 1: EnteringVT1 (0x0x97f01258)
      >>> 2: EnteringVT2 (0x0x97f0125c)
      >>> 3: EnteringVT3 (0x0x97f01260)
      FAILED: (14) waiter_count expected: 0, actually: 4
      ### test1: finished virtual

      ### test2: started virtual
      >>> [15]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 4
      >>> notify_waiter_count: 4
      >>> waiters:
      >>> 0: EnteringVT0 (0x0x97f01254)
      >>> 1: EnteringVT1 (0x0x97f01258)
      >>> 2: EnteringVT2 (0x0x97f0125c)
      >>> 3: EnteringVT3 (0x0x97f01260)
      >>> notify_waiters:
      >>> 0: WaitingVT0 (0x0x97f01264)
      >>> 1: WaitingVT1 (0x0x97f01268)
      >>> 2: WaitingVT2 (0x0x97f0126c)
      >>> 3: WaitingVT3 (0x0x97f01270)
      FAILED: (15) waiter_count expected: 0, actually: 4
      FAILED: (15) notify_waiter_count expected: 0, actually: 4
      ### test2: finished virtual

      ### test3: started virtual
      >>> [16]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 0
      >>> notify_waiter_count: 4
      >>> notify_waiters:
      >>> 0: WaitingVT0 (0x0x97f01254)
      >>> 1: WaitingVT1 (0x0x97f01258)
      >>> 2: WaitingVT2 (0x0x97f0125c)
      >>> 3: WaitingVT3 (0x0x97f01260)
      FAILED: (16) notify_waiter_count expected: 0, actually: 4
      >>> [17]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 4
      >>> notify_waiter_count: 4
      >>> waiters:
      >>> 0: EnteringVT0 (0x0x97f01254)
      >>> 1: EnteringVT1 (0x0x97f01258)
      >>> 2: EnteringVT2 (0x0x97f0125c)
      >>> 3: EnteringVT3 (0x0x97f01260)
      >>> notify_waiters:
      >>> 0: WaitingVT0 (0x0x97f01264)
      >>> 1: WaitingVT1 (0x0x97f01268)
      >>> 2: WaitingVT2 (0x0x97f0126c)
      >>> 3: WaitingVT3 (0x0x97f01270)
      FAILED: (17) waiter_count expected: 0, actually: 4
      FAILED: (17) notify_waiter_count expected: 0, actually: 4
      >>> [18]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 5
      >>> notify_waiter_count: 3
      >>> waiters:
      >>> 0: WaitingVT0 (0x0x97f01254)
      >>> 1: EnteringVT0 (0x0x97f01258)
      >>> 2: EnteringVT1 (0x0x97f0125c)
      >>> 3: EnteringVT2 (0x0x97f01260)
      >>> 4: EnteringVT3 (0x0x97f01264)
      >>> notify_waiters:
      >>> 0: WaitingVT1 (0x0x97f01268)
      >>> 1: WaitingVT2 (0x0x97f0126c)
      >>> 2: WaitingVT3 (0x0x97f01270)
      FAILED: (18) waiter_count expected: 0, actually: 5
      FAILED: (18) notify_waiter_count expected: 0, actually: 3
      >>> [19]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 6
      >>> notify_waiter_count: 2
      >>> waiters:
      >>> 0: WaitingVT0 (0x0x97f01254)
      >>> 1: WaitingVT1 (0x0x97f01258)
      >>> 2: EnteringVT0 (0x0x97f0125c)
      >>> 3: EnteringVT1 (0x0x97f01260)
      >>> 4: EnteringVT2 (0x0x97f01264)
      >>> 5: EnteringVT3 (0x0x97f01268)
      >>> notify_waiters:
      >>> 0: WaitingVT2 (0x0x97f0126c)
      >>> 1: WaitingVT3 (0x0x97f01270)
      FAILED: (19) waiter_count expected: 0, actually: 6
      FAILED: (19) notify_waiter_count expected: 0, actually: 2
      >>> [20]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 7
      >>> notify_waiter_count: 1
      >>> waiters:
      >>> 0: WaitingVT0 (0x0x97f01254)
      >>> 1: WaitingVT1 (0x0x97f01258)
      >>> 2: WaitingVT2 (0x0x97f0125c)
      >>> 3: EnteringVT0 (0x0x97f01260)
      >>> 4: EnteringVT1 (0x0x97f01264)
      >>> 5: EnteringVT2 (0x0x97f01268)
      >>> 6: EnteringVT3 (0x0x97f0126c)
      >>> notify_waiters:
      >>> 0: WaitingVT3 (0x0x97f01270)
      FAILED: (20) waiter_count expected: 0, actually: 7
      FAILED: (20) notify_waiter_count expected: 0, actually: 1
      >>> [21]
      >>> owner: MainThread (0x0x97f01250)
      >>> entry_count: 1
      >>> waiter_count: 8
      >>> notify_waiter_count: 0
      >>> waiters:
      >>> 0: WaitingVT0 (0x0x97f01254)
      >>> 1: WaitingVT1 (0x0x97f01258)
      >>> 2: WaitingVT2 (0x0x97f0125c)
      >>> 3: WaitingVT3 (0x0x97f01260)
      >>> 4: EnteringVT0 (0x0x97f01264)
      >>> 5: EnteringVT1 (0x0x97f01268)
      >>> 6: EnteringVT2 (0x0x97f0126c)
      >>> 7: EnteringVT3 (0x0x97f01270)
      FAILED: (21) waiter_count expected: 0, actually: 8
      ### test3: finished virtual
      >>> [22]
      >>> owner: none (0x0)
      >>> entry_count: 0
      >>> waiter_count: 0
      >>> notify_waiter_count: 0
      STDERR:
      java.lang.RuntimeException: Failed status returned from the agent
      at ObjectMonitorUsage.main(ObjectMonitorUsage.java:335)

            syan Sendao Yan (Inactive)
            syan Sendao Yan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: