8332923: ObjectMonitorUsage.java failed with unexpected waiter_count

Co-authored-by: Jiawei Tang <jwtang@openjdk.org>
Reviewed-by: sspitsyn, alanb, amitkumar